--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  card_swiper: ^2.0.4
   cloud_firestore: ^3.1.10
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.11
@@ -35,7 +36,9 @@ dependencies:
   flutter:
     sdk: flutter
   fluttertoast: ^8.0.9
+  gradient_widgets: ^0.6.0
   image_picker: ^0.8.5+3
+  rounded_loading_button: ^2.1.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
@@ -55,6 +58,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/preons.png
+    - assets/slide-1.png
+    - assets/slide-2.png
+    - assets/slide-3.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
   # For details regarding adding assets from package dependencies, see
